style(color): fix color contrast

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,7 @@
   --destructive: hsl(0 84.2% 60.2%);
   --destructive-foreground: hsl(210 40% 98%);
   --border: hsl(214.3 31.8% 91.4%);
-  --input: hsl(214.3 31.8% 91.4%);
+  --input: hsl(214.3 31.8% 86.4%);
   --ring: hsl(221.2 83.2% 53.3%);
   --radius: 0.5rem;
   --chart-1: hsl(12 76% 61%);
@@ -53,8 +53,8 @@
   --accent-foreground: hsl(210 40% 98%);
   --destructive: hsl(0 62.8% 50.6%);
   --destructive-foreground: hsl(210 40% 98%);
-  --border: hsl(217.2 32.6% 17.5%);
-  --input: hsl(217.2 32.6% 17.5%);
+  --border: hsl(217.2 32.6% 20.5%);
+  --input: hsl(217.2 32.6% 24.5%);
   --ring: hsl(224.3 76.3% 48%);
   --chart-1: hsl(220 70% 50%);
   --chart-2: hsl(160 60% 45%);
